--- a/Comfizen/Views/SliderCompareView.xaml
+++ b/Comfizen/Views/SliderCompareView.xaml
@@ -182,12 +182,13 @@
                     <Slider x:Name="PositionSlider" Style="{StaticResource VideoSliderStyle}"
                             Value="{Binding CurrentPositionSeconds, Mode=TwoWay}"
                             Maximum="{Binding MaxDurationSeconds}"
-                            IsMoveToPointEnabled="True"
                             Width="200" Margin="10,0"
-                            Thumb.DragStarted="PositionSlider_DragStarted"
-                            Thumb.DragCompleted="PositionSlider_DragCompleted"
                             ValueChanged="PositionSlider_ValueChanged"
-                            PreviewMouseLeftButtonDown="PositionSlider_PreviewMouseLeftButtonDown"/>
+                            PreviewMouseLeftButtonDown="PositionSlider_PreviewMouseLeftButtonDown"
+                            PreviewMouseLeftButtonUp="PositionSlider_PreviewMouseLeftButtonUp"
+                            MouseMove="PositionSlider_MouseMove"
+                            Thumb.DragStarted="PositionSlider_DragStarted"
+                            Thumb.DragCompleted="PositionSlider_DragCompleted"/>
                     <TextBlock Text="{Binding MaxDurationFormatted}" Foreground="White" VerticalAlignment="Center" Margin="0,0,10,0"/>
 
                     <Button Command="{Binding PlayPauseCommand}" Width="40" Height="40" FontSize="16">
