--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -1122,6 +1122,7 @@
         </Border>
         
         <Grid x:Name="FullScreenViewer" Grid.Row="0" Grid.RowSpan="4" Background="#D8000000"
+              Focusable="True" PreviewKeyDown="FullScreenViewer_PreviewKeyDown"
               Visibility="{Binding FullScreen.IsFullScreenOpen, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}"
               MouseLeftButtonDown="FullScreenViewer_MouseLeftButtonDown"
               IsVisibleChanged="FullScreenViewer_IsVisibleChanged"
@@ -1259,13 +1260,27 @@
                             </Grid.Style>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
+
+                            <Button Grid.Column="0" Command="{Binding FullScreen.PlayPauseCommand}" Width="40" Height="40" FontSize="16" Margin="0,0,10,0">
+                                <Button.Style>
+                                    <Style TargetType="Button" BasedOn="{StaticResource OverlayButton}">
+                                        <Setter Property="Content" Value="▶"/> <!-- Play Icon -->
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding FullScreen.IsPlaying}" Value="True">
+                                                <Setter Property="Content" Value="⏸"/> <!-- Pause Icon -->
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
+                            </Button>
                             
-                            <TextBlock x:Name="CurrentTimeTextBlock" Grid.Column="0" Text="00:00" Margin="0,0,10,0" Foreground="White" VerticalAlignment="Center"/>
+                            <TextBlock x:Name="CurrentTimeTextBlock" Grid.Column="1" Text="00:00" Margin="0,0,10,0" Foreground="White" VerticalAlignment="Center"/>
                             
-                            <Slider x:Name="PositionSlider" Grid.Column="1" VerticalAlignment="Center"
+                            <Slider x:Name="PositionSlider" Grid.Column="2" VerticalAlignment="Center"
                                     Style="{StaticResource VideoSliderStyle}"
                                     ValueChanged="PositionSlider_ValueChanged"
                                     MouseMove="PositionSlider_MouseMove"
@@ -1273,7 +1288,7 @@
                                     Thumb.DragStarted="PositionSlider_DragStarted"
                                     Thumb.DragCompleted="PositionSlider_DragCompleted"/>
 
-                            <TextBlock x:Name="DurationTextBlock" Grid.Column="2" Text="00:00" Margin="10,0,0,0" Foreground="White" VerticalAlignment="Center"/>
+                            <TextBlock x:Name="DurationTextBlock" Grid.Column="3" Text="00:00" Margin="10,0,0,0" Foreground="White" VerticalAlignment="Center"/>
                         </Grid>
                         <Button Content="💾"
                                 ToolTip="{x:Static local:Hotkeys.SaveImageTooltip}"
