--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -441,24 +441,61 @@
                                                                 <Border Background="{StaticResource SecondaryBackground}" BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="1" CornerRadius="3" Padding="10" Margin="0,2,0,0">
                                                                     <StackPanel>
                                                                         <TextBlock Text="{local:Translate Presets_SaveCurrentState}" FontWeight="Bold" Margin="0,0,0,5"/>
+                                                                        
                                                                         <Grid>
-                                                                            <Grid.ColumnDefinitions>
-                                                                                <ColumnDefinition Width="*"/>
-                                                                                <ColumnDefinition Width="Auto"/>
-                                                                            </Grid.ColumnDefinitions>
-                                                                            <TextBox x:Name="PresetNameTextBox" Grid.Column="0" MinWidth="150"
-                                                                                Text="{Binding NewPresetName, UpdateSourceTrigger=PropertyChanged}" />
-                                                                            <Button Grid.Column="1" Content="{local:Translate Presets_SaveButton}" Margin="5,0,0,0"
-                                                                                Command="{Binding SavePresetCommand}"
-                                                                                IsDefault="True"/>
+                                                                            <Grid.RowDefinitions>
+                                                                                <RowDefinition Height="Auto"/>
+                                                                                <RowDefinition Height="Auto"/>
+                                                                                <RowDefinition Height="Auto"/>
+                                                                            </Grid.RowDefinitions>
+                                                                            
+                                                                            <!-- Preset Name Input -->
+                                                                            <TextBox Grid.Row="0" x:Name="PresetNameTextBox" MinWidth="250"
+                                                                                     Text="{Binding NewPresetName, UpdateSourceTrigger=PropertyChanged}" />
+
+                                                                            <!-- Field Selection List -->
+                                                                            <Border Grid.Row="1" BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="0,1" Margin="0,8" Padding="0,8,0,5">
+                                                                                <StackPanel>
+                                                                                    <TextBlock Text="{local:Translate Presets_FieldsToInclude}" Margin="0,0,0,5" Foreground="{StaticResource TextSecondaryBrush}"/>
+                                                                                    <ScrollViewer MaxHeight="200" VerticalScrollBarVisibility="Auto">
+                                                                                        <ItemsControl ItemsSource="{Binding FieldsForPresetSelection}">
+                                                                                            <ItemsControl.ItemTemplate>
+                                                                                                <DataTemplate>
+                                                                                                    <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                                                                                                              Margin="2" VerticalContentAlignment="Center">
+                                                                                                        <TextBlock Text="{Binding Name}" />
+                                                                                                    </CheckBox>
+                                                                                                </DataTemplate>
+                                                                                            </ItemsControl.ItemTemplate>
+                                                                                        </ItemsControl>
+                                                                                    </ScrollViewer>
+
+                                                                                    <StackPanel Orientation="Horizontal" Margin="2,5,0,0">
+                                                                                        <Button Content="{local:Translate Presets_SelectAll}"
+                                                                                                Command="{Binding SelectAllFieldsForPresetCommand}"
+                                                                                                Style="{StaticResource TextButtonStyle}"/>
+                                                                                        <Button Content="{local:Translate Presets_DeselectAll}"
+                                                                                                Command="{Binding DeselectAllFieldsForPresetCommand}"
+                                                                                                Style="{StaticResource TextButtonStyle}"
+                                                                                                Margin="10,0,0,0"/>
+                                                                                    </StackPanel>
+                                                                        
+                                                                                </StackPanel>
+                                                                            </Border>
+
+                                                                            <!-- Save Button -->
+                                                                            <Button Grid.Row="2" Content="{local:Translate Presets_SaveButton}" 
+                                                                                    Command="{Binding SavePresetCommand}"
+                                                                                    HorizontalAlignment="Right"
+                                                                                    IsDefault="True"/>
                                                                         </Grid>
                                                                     </StackPanel>
                                                                 </Border>
                                                             </Popup>
                     
                                                             <Grid x:Name="ContentSite" DockPanel.Dock="Bottom" Visibility="Collapsed">
-                                                                 <Border Opacity="0.2" Background="{Binding DataContext.HighlightColor, RelativeSource={RelativeSource AncestorType=Expander}, Converter={StaticResource HexToBrushConverter}}"/>
-                                                                 <ContentPresenter ContentSource="Content" Margin="8"/>
+                                                                <Border Opacity="0.2" Background="{Binding DataContext.HighlightColor, RelativeSource={RelativeSource AncestorType=Expander}, Converter={StaticResource HexToBrushConverter}}"/>
+                                                                <ContentPresenter ContentSource="Content" Margin="8"/>
                                                             </Grid>
                                                         </DockPanel>
                                                     </Border>
