--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -684,14 +684,13 @@
                                         </StackPanel.Style>
 
                                         <Button Content="&#xE70F;"
-                                                Command="{Binding DataContext.StartUpdatePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
+                                                Command="{Binding DataContext.StartUpdatePresetCommand, RelativeSource={RelativeSource AncestorType=local:FilterableComboBox}}"
                                                 CommandParameter="{Binding}"
                                                 ToolTip="{local:Translate Presets_UpdateTooltip}"
                                                 Style="{StaticResource IconButton}"/>
                                         
-                                        <!-- FIX: Use the correct icon character code for the delete button -->
                                         <Button Content="&#xE74D;" 
-                                                Command="{Binding DataContext.DeletePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
+                                                Command="{Binding DataContext.DeletePresetCommand, RelativeSource={RelativeSource AncestorType=local:FilterableComboBox}}"
                                                 CommandParameter="{Binding}"
                                                 ToolTip="{local:Translate Presets_DeleteTooltip}"
                                                 Style="{StaticResource IconButton}"/>
