--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -376,7 +376,7 @@
                                                 <ControlTemplate TargetType="Expander">
                                                     <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="3" Background="Transparent">
                                                         <DockPanel>
-                                                            <ToggleButton DockPanel.Dock="Top" IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}" OverridesDefaultStyle="True" Content="{TemplateBinding Header}" ContentTemplate="{TemplateBinding HeaderTemplate}">
+                                                            <ToggleButton DockPanel.Dock="Top" IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}" OverridesDefaultStyle="True" Content="{TemplateBinding Header}" ContentTemplate="{TemplateBinding HeaderTemplate}" PreviewMouseLeftButtonDown="ExpanderHeader_PreviewMouseLeftButtonDown">
                                                                 <ToggleButton.Template>
                                                                     <ControlTemplate TargetType="ToggleButton">
                                                                         <Grid>
