queue_manager_wip

--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -33,6 +33,7 @@
         <local:StringToBoolConverter x:Key="StringToBoolConverter" />
         <local:CornerRadiusConverter x:Key="CornerRadiusConverter" />
         <local:SelectionCountToBooleanConverter x:Key="SelectionCountToBooleanConverter"/>
+        <local:ItemToIndexConverter x:Key="ItemToIndexConverter"/>
         
         <!-- ScrollBar Thumb Style -->
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
